### Update 1.10.1 🎉 (August 21, 2024)

- Fixed display of some previews in the mini player.
- Fixed a bug that made it possible to open the mini-player on the playlist page.
- The settings window has a fixed size again.
- Added Placeholder Text to Host, Port, Login and Password fields in Application Proxy settings.
- Other minor fixes and improvements.

### Update 1.10 🎉 (August 10, 2024)

- Added ability to download tracks/playlists with custom proxy (Enabled by default). To disable it, go to settings > Web Engine > Allow pytube (downloader) access to proxy > uncheck the checkbox.
- Removed 30-second timeout for track/playlist downloader.

### Update 1.9 🎉 (August 9, 2024)

- Added the ability to change the type of the application's custom proxy server. Available types and their description:
  - HttpProxy - Used to transmit HTTP requests through a proxy.
  - Socks5Proxy - Supports transmission of all data types, including TCP and UDP.
  - Default - Sets the default proxy as specified in the system settings.
  - NoProxy - Disables the use of a proxy server.
- Added ability to specify login and password for custom proxy server.
- Fixed application crash when saving empty port of custom proxy server in settings.

### Update 1.8 🎉 (August 9, 2024)

- Logging level is now Info instead of Error.
- Changed log file name from `errors.log` to `app.log`.
- Added support for custom proxy. You can enable and change it in the settings in the "Web Engine" tab.

### Update 1.8-rc5 🎉 (August 7, 2024)

- Added a 30-second timeout for track/playlist downloads to address infinite download issues.
- The message box for new updates no longer displays release notes.
- Updated pytubefix to version 6.9.2.
- File names for downloaded tracks/playlists are now filtered for invalid characters to avoid conflicts.
- Tracks/playlists are now downloaded with audio only, no video.
- Minor code optimization.

### Update 1.8-rc4 🎉 (August 6, 2024)
